<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tut"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="225dp"
            android:layout_height="62dp"
            android:contentDescription="TODO"
            android:src="@drawable/mainlogo"
            app:layout_constraintBottom_toTopOf="@+id/guide_half"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline

            android:id="@+id/guide_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/grid_buttons"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guide_half"
            app:layout_constraintVertical_bias="0.177">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/welcome_kk"
                android:textColor="@color/white"
                android:textSize="@dimen/ultra_large_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/welcome_ru"
                android:textColor="@color/white"
                android:textSize="@dimen/ultra_large_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/welcome_en"
                android:textColor="@color/white"
                android:textSize="@dimen/ultra_large_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grid_buttons"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="0dp"
            android:layout_marginBottom="24dp"
            android:measureWithLargestChild="true"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/btn_kz"
                style="@style/ButtonStyle.White"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="binding_1"
                android:text="@string/kk"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_ru"
                style="@style/ButtonStyle.White"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="StartLoginActivity"
                android:tag="binding_2"
                android:text="@string/ru"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_en"
                style="@style/ButtonStyle.White"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="binding_3"
                android:text="@string/en"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

