<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="13dp"
    android:paddingRight="13dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tut"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:orientation="horizontal"
        android:id="@+id/guide_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"/>

    <ImageView
        android:layout_width="225dp"
        android:layout_height="62dp"
        android:src="@drawable/mainlogo"
        app:layout_constraintBottom_toBottomOf="@+id/guide_center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_account"
        android:textColor="@color/white"
        android:textSize="@dimen/ultra_large_text_size"
        android:textStyle="bold"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/text_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_center"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/enter_phone_number"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/card_iin"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_iin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:cardBackgroundColor="@color/black20"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/card_phone">

        <LinearLayout
            android:layout_width="366dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/enter_iin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="121221123456"
                android:inputType="phone"
                android:paddingLeft="25dp"
                android:singleLine="true"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="13dp"
                tools:layout_editor_absoluteY="468dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:cardBackgroundColor="@color/black20"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_login">

        <LinearLayout
            android:layout_width="366dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_phone_number_hint"
                android:inputType="phone"
                android:paddingLeft="25dp"
                android:singleLine="true"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_login"
        style="@style/ButtonStyle.White"
        android:layout_width="377dp"
        android:layout_height="59dp"
        android:layout_marginBottom="12dp"
        android:onClick="startQrActivityTest"
        android:tag="binding_1"
        android:text="@string/log_in"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/frame_policy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/frame_policy"
        android:tag="binding_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <CheckBox
            android:id="@+id/cb_policy"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:clickable="true"
            android:linksClickable="true"
            android:tag="binding_4"
            android:text="@string/privacy_policy"
            android:textColor="@color/white" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>